# MrBayes

./: .gitignore  INSTALL  INSTALL-Docker-CentOS.md  INSTALL-Docker-Ubuntu.md  INSTALL-Docker.md  Makefile.am  Makefile.in  MrBayes-3.2.0_installer_MACx64.pkg  MrBayes-3.2.1_installer_MAC.pkg  MrBayes_ Authors.htm  MrBayes_ Bugreports.htm  MrBayes_ Download.htm  NEWS  README  README.md  TODO  aclocal.m4  authors.html  bugreports.html  configure  configure.ac  download.html  home.html  index.html  issues.html  links.html  manual.html  menu.html  tidy.conf
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  internal-issue.md  support-request.md
.github/workflows/: checks.yaml  code-build-tests.yml  code-tests.yml  doc-build-tests.yml  doc-tests.yml
MrBayes_ Links_files/: mb.css
_build/: Makefile  authors.html  issues.html
autotools/: ax_reset_header_cache.m4
beagle/: README.md  centos.7.md  debian.sid.md  ubuntu-18.04.md
css/: handheld.css  style.css
doc/: Makefile.am  Makefile.in  MrBayes3.2_DirichletPr.Notes.doc  commref_mb3.2.txt  release_note.txt
doc/Huelsenbeck_Ronquist_SMME_2005/: StatisticalMethods_Chapter.tex
doc/Huelsenbeck_Ronquist_SMME_2005/src/: README.md
doc/SMME_paper/: Makefile.am  Makefile.in
doc/SMME_paper/src/: Huelsenbeck_Ronquist_SMME_2005.bib  Huelsenbeck_Ronquist_SMME_2005.tex  README.md
doc/man/: mb.1
doc/manual/: Makefile.am  Makefile.in  bayes.bib  wiki2latex.rb
doc/manual/src/: Makefile.am  Makefile.in  Manual_MrBayes_v3.2.tex  bayes.bib  sysbio.bst
doc/src/: Manual_MrBayes_v3.2.tex  MrBayes3.2_TODO.txt  Release_instructions.txt  StatisticalMethods_Chapter.tex
doc/tutorial/: MBDating.tex  Makefile.am  Makefile.in  hym.nex  master_refs.bib
doc/tutorial/.texpadtmp/: MBDating.aux  MBDating.bbl  MBDating.blg  MBDating.out
doc/tutorial/src/: MBDating.tex  Makefile.am  Makefile.in  sysbio.bst
doc/tutorial/src/figures/: distribution.r
examples/: Makefile.am  Makefile.in  avian_ovomucoids.nex  codon.nex  cynmix.nex  finch.nex  hym.nex  hymfossil.nex  kim.nex  primates.nex  replicase.nex  sceloporus.nex  short-test.nex
source/: Makefile  authors.html  download.html  index.html  issues.html  links.html  manual.html  tidy.conf
src/: COPYING  CompileInstructions.txt  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  aclocal.m4  bayes.c  bayes.h  best.c  best.h  command.c  command.h  config.h.in  configure  configure.ac  configure.in  globals.h  gpl.txt  install-sh  jointprior.h  likelihood.c  likelihood.h  mb.c  mb.h  mbbeagle.c  mbbeagle.h  mbmath.c  mbmath.h  mcmc.c  mcmc.h  model.c  model.h  mrbayes.sln  mrbayes.vcproj  plot.c  plot.h  proposal.c  proposal.h  (+12 more)
src/Seraina/: bayes.c  best.c  best.h  command.h  mb.c  mb.h  mbbeagle.h  mbmath.c  mbmath.h  mcmc.c  mcmc.h  model.c  plot.c  plot.h  sump.h  sumt.c  sumt.h  tree.c
src/Seraina/done/: command.c  mbbeagle.c  sump.c  utils.c  utils.h
test/: adh.nex  ancstate_test.nex  avian_ovomucoids.nex  batch_test.nex  beagle_test.nex  best_test.nex  best_test_s4g1.nex  best_test_s4g2.nex  best_test_s4g4.nex  calibration_test.nex  clockprior_test.nex  cynmix.nex  cynmodel.nex  cynmorph.nex  cyntree.nex  debug-gpu.nex  debug.nex  fbd_prior.nex  kimstems.nex  mixed_test.nex  model_test.nex  primates.nex  primates_treeinfo.nex  replicase.nex  run_all_tests.nex  savolainen.nex  taylor.nex  test-clock.uni.nex  test-directional.nex  test-symdirpr.py  test.nex  test_criteria.txt  testrun.nex  tree_test.nex  treeprior_test.nex
test/batch_test/: create_batch_test.bash  mb_feed.bash  mb_feed_mpi.bash  nex_separator.bash  subst_mcmc.bash
test/data/: 6993_116.nex  6993_139.nex  7190_116.nex  7190_139.nex  7204_116.nex  7204_139.nex  7250_116.nex  7250_139.nex  adh.nex  agast282.nex  agtotalcore.nex  alcedinidae.nex  anctest.nex  anolis.nex  ashley_alignment.nex  avian_ovomucoids.nex  bglobin.nex  ck_ali.nex  codon.nex  combined_nuc_ex.nex  covarion_mj.nex  cynmix.nex  cynmorph.nex  ef1_hymatol.nex  ef1a_nuc.nex  finch.nex  gothenburg.nex  haplo.nex  hawks_alignment.nex  hawks_cmds.nex  hymfossil.nex  jeanette.nex  jovkurs1.nex  kim.nex  kimstems.nex  lambkin.nex  logproblem.nex  maddison.nex  mark.nex  nuc58_199.nex  (+16 more)
test/performance-test/: agtotalcore255.nex  alcedinidae.nex  aminoacid.nex  beagle.nex  codVar.nex  codeq.nex  doall.mb.cpud  doall.mb.cpus  doall.mb3.2  doall.mb3.2d  doall.mbb  doall.mbb.2gpud  doall.mbb.2gpus  doall.mbb.cpud  doall.mbb.cpus  doall.mbb.gpud  doall.mbb.gpus  hawks.nex  mcmc.nex  multipartite.nex  nucAll.nex  nucAllHalfTaxa.nex  nucAllOEighthTaxa.nex  nucAllQuartTaxa.nex  nucHalf.nex  nucJoinAll.nex  nuclsu_206.nex  nucssu_211.nex  parse-performance-results  performance.tex  restr.nex  rpb2_199_nuc.nex
testing/: Makefile.am  Makefile.in  runtests.sh.in  short-test.nex.in  test1.nex  test1.nex.in  test2.nex  test2.nex.in
